--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="menu_slideshow">Обзоры</string>
 
     <string name="home_second">Home Second</string>
+    <string name="menu_main_activity2">новая активность</string>
 </resources>
